discussion/kv_engine/170541/170541_rev18_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: Remove tasks from custom cpuPool queue on unregister

We just need to clean up the task but we currently do so by
running it, meaning that we must wait for other tasks to
complete first. Instead, remove the tasks from the queue and
tidy them up manually.

Change-Id: Id3f52a07d693d98510ab6b3f918ad4beb1b8721d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-15 13:31:18.000000000
Message: 
Uploaded patch set 18.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-15 14:16:11.000000000
Message: 
Patch Set 18: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15631/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15631/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15631/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43949/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0067/0159]: test restart...W0215 05:55:21.029018 114132 HazptrDomain.h:670] Using the default inline executor for asynchronous reclamation may be susceptible to deadlock if the current thread happens to hold a resource needed by the deleter of a reclaimable object


99% tests passed, 1 tests failed out of 422

Total Test time (real) = 739.86 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43949/ )

Timeout of a CTest test 422/422 Test #272: ep_testsuite.value_eviction.comp_active .......................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43949/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17689/ : FAILURE

Failure of GoogleTest "STParamMagmaBucketTest/STParamMagmaBucketTest.MB_47566/persistent_magma_full_eviction":

<pre>
[ RUN      ] STParamMagmaBucketTest/STParamMagmaBucketTest.MB_47566/persistent_magma_full_eviction
[2022-02-15T14:08:20.184Z] ../kv_engine/engines/ep/tests/module_tests/magma_bucket_tests.cc:554: Failure
[2022-02-15T14:08:20.184Z] Value of: result
[2022-02-15T14:08:20.184Z]   Actual: true
[2022-02-15T14:08:20.184Z] Expected: false
[2022-02-15T14:08:20.184Z] [  FAILED  ] STParamMagmaBucketTest/STParamMagmaBucketTest.MB_47566/persistent_magma_full_eviction, where GetParam() = ("persistent_magma", "full_eviction") (132 ms)
STParamMagmaBucketTest/STParamMagmaBucketTest.MB_47566/persistent_magma_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17689/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18414/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18414/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14473/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37058/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17382/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16448/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25779/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5340/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5279/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-15 15:05:51.000000000
Message: 
Patch Set 18:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15631/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15631/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15631/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14473/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43952/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37058/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17382/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17692/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16448/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25779/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5340/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5279/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18417/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
